# haku-windows

./: .gitignore  Cargo.toml  LICENSE  build.rs
.github/workflows/: build.yml
src/: config.rs  license.rs  logging.rs  main.rs  setup.rs
src/embedding/: ffi.rs  llama_bridge.c  llama_bridge.h  mod.rs
src/flow/: mod.rs
src/platform/: mod.rs  stub.rs
src/platform/windows/: accessibility.rs  apps.rs  capture.rs  input.rs  mod.rs  tts.rs
src/server/: mcp.rs  mod.rs  router.rs  websocket.rs
src/session/: browser.rs  dom_scanner.js  manager.rs  mod.rs
